testing progress bar

--- a/templates/updateTableUnsorted.html
+++ b/templates/updateTableUnsorted.html
@@ -13,6 +13,7 @@
 				<a href="{{url_for('updateTableUnsorted', page_num=1, per_page_res=count, order_by=order_by, sort_cat=sort_cat )}}"><button type="button" class="btn btn-primary">All</button></a>
 				<a href="{{url_for('updateTableUnsorted', page_num=t3.page, per_page_res=15, order_by=order_by, sort_cat=sort_cat )}}"><button type="button" class="btn btn-primary">15</button></a>
 				<a href="{{url_for('updateTableUnsorted', page_num=t3.page, per_page_res=30, order_by=order_by, sort_cat=sort_cat )}}"><button type="button" class="btn btn-primary">30</button></a>
+				<a href="{{url_for('updateTableUnsorted', page_num=t3.page, per_page_res=50, order_by=order_by, sort_cat=sort_cat )}}"><button type="button" class="btn btn-primary">50</button></a>
 					<div class="table">
 						<div class="row header" style="content: none">
 							<div class="cell">Number</div>
