--- a/templates/addRedditInfo.html
+++ b/templates/addRedditInfo.html
@@ -6,7 +6,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script>
 
-	var source = new EventSource("/progress");
+	var source = new EventSource("/progress_append");
 	source.onmessage = function(event) {
 		$('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
 		$('.progress-bar-label').text(event.data+'%');
@@ -23,5 +23,8 @@
 			<span class="progress-bar-label">0%</span>
 		</div>
 	</div>
+	<button type='button'><a href='http://127.0.0.1:5000/devArea'>Go Back</a></button>
+	</br>
+	<button type='button'><a href='url_for('viewresults') page_num=1'>View Results</a></button>
 </div>
 </body>
