--- a/templates/devArea.html
+++ b/templates/devArea.html
@@ -1,5 +1,6 @@
 <html>
 {% include "topnav.html" %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <div class="classname">
 <h1>DEV AREA</h1>
 </br>
@@ -11,12 +12,13 @@
 <button type="button"><a href="http://127.0.0.1:5000/viewresults">View Results</a></button>
 <button type="button"><a href="{{url_for('deleteposts')}}">delete from db</a></button>
 <button type="button"><a href="{{url_for('unfavpost')}}">Unsave post from Reddit Account</a></button>
-<button type="button" onclick="myFunction()"><a href="http://127.0.0.1:5000/addRedditInfo">test</a></button>
+<button type="button" onclick="myFunction(),myFunction3()"><a href="http://127.0.0.1:5000/addRedditInfo">test</a></button>
 </div>
+
 <script>
 function myFunction() {
     var divsToHide = document.getElementsByClassName("classname");
-    var divsToShow = document.getElementsByClassName("loader");
+    var divsToShow = document.getElementsByClassName("bar");
         for(var i = 0; i < divsToHide.length; i++){
         divsToHide[i].style.visibility = "hidden"; // or
         divsToHide[i].style.display = "none"; // depending on what you're doing
@@ -24,15 +26,42 @@ function myFunction() {
         for(var i = 0; i < divsToShow.length; i++){
         divsToShow[i].style.visibility = "visible"; // or
     }
-    document.getElementsByClassName("select").innerHTML = "Loading Please Wait..."
-
 }
 </script>
+<script>
+function myFunction2() {
+    document.getElementsByClassName("select").innerHTML = "Loading Please Wait..."
+    let promise = new Promise((resolve, reject) => {
+    	window.location.href = "http://127.0.0.1:5000/addRedditInfo";
+    })
+}
+async function myFunction3() {
+	await myFunction2();
+	var source =  new EventSource("/progress_append");
+	source.onmessage = function(event) {
+		$('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
+		$('.progress-bar-label').text(event.data+'%');
+		if(event.data == 100){
+			source.close()
+	}
+}
+}
+</script>
+
 </br>
 </br>
 </br>
-<h2 class="select"></h2>
-<div class="loader" style="visibility: hidden;margin-left: 50%;"></div>
+<div class="bar" style="visibility: hidden;">
+<h2 style="text-align: center;">Adding entries to table...</h2>
+	<div class="progress" style="width: 50%; margin: 50px auto;">
+		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%; margin: 0 auto">
+			<span class="progress-bar-label">0%</span>
+		</div>
+	</div>
+</div>	
+
+<!-- <h2 class="select"></h2> -->
+<!-- <div class="loader" style="visibility: hidden;margin-left: 50%;"></div> -->
 
 
 </html>
