--- a/templates/devArea.html
+++ b/templates/devArea.html
@@ -7,10 +7,10 @@
 </br>
 </br>
 <button type="button"><a href="{{url_for('index')}}">Home</a></button>
-<button type="button"><a href="http://127.0.0.1:5000/droptable">Drop Table</a></button>
-<button type="button"><a href="http://127.0.0.1:5000/createtable">Create table</a></button>
-<button type="button"><a href="http://127.0.0.1:5000/addRedditInfo">Add reddit info to table</a></button>
-<button type="button"><a href="http://127.0.0.1:5000/viewresults">View Results</a></button>
+<button type="button"><a href="{{url_for('droptable')}}">Drop Table</a></button>
+<button type="button"><a href="{{url_for('createtable')}}">Create table</a></button>
+<button type="button"><a href="{{url_for('addRedditInfo')}}">Add reddit info to table</a></button>
+<button type="button"><a href="{{url_for('viewresults')}}">View Results</a></button>
 <button type="button"><a href="{{url_for('deleteposts')}}">delete from db</a></button>
 <button type="button"><a href="{{url_for('unfavpost')}}">Unsave post from Reddit Account</a></button>
 <script>
