--- a/templates/devArea.html
+++ b/templates/devArea.html
@@ -15,7 +15,7 @@
 <script>
 function myFunction() {
     $('.test').on('click', function(e) { pace.start(); });
-    $.ajax({ url : "{{url_for('addRedditInfo')}}", type : 'GET'}) 
+    $.ajax({ url : "http://127.0.0.1:5000/addRedditInfo", type : 'GET'}) 
 }
 </script>
 <button type="button" class="test" onclick="myFunction(), myFunction2()">test</button>
@@ -43,7 +43,7 @@ function myFunction2() {
     var source = new EventSource("/progress_append");
     source.onmessage = function(event) {
         try{
-        var division = Math.ceil((event.data/{{add_post_total}} * 100));
+        var division = Math.ceil((event.data/849 * 100));
         console.log(division);
         $('.progress-bar').css('width', division+'%').attr('aria-valuenow', division);
         $('.progress-bar-label').text(division+'%');
